# baremetal-libc

./: CMakeLists.txt  README.md
include/: complex.h  math.h  stdint.h  stdlib.h  time.h
patches/: x86_64-baremetal-libc.patch
